Make a string sound better. MOZILLA-120

--- a/hu/toolkit/chrome/global/resetProfile.properties
+++ b/hu/toolkit/chrome/global/resetProfile.properties
@@ -5,7 +5,7 @@
 # LOCALIZATION NOTE: These strings are used for profile reset.
 
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
-resetUnusedProfile.message=Úgy tűnik, %S nem lett elindítva egy ideje. Szeretné kitakarítani a friss, újszerű élmény érdekében? Egyébként pedig üdvözöljük újra!
+resetUnusedProfile.message=Úgy tűnik, a %S nem lett elindítva egy ideje. Szeretné kitakarítani a friss, újszerű élmény érdekében? Egyébként pedig üdvözöljük újra!
 
 # LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
 resetProfile.resetButton.label=%S alaphelyzetbe…
