--- a/it/security/manager/chrome/pippki/pippki.properties
+++ b/it/security/manager/chrome/pippki/pippki.properties
@@ -49,12 +49,9 @@ pageInfo_NoEncryption = Connessione non cifrata
 pageInfo_Privacy_None1 = Il sito %S non supporta la cifratura per la pagina visualizzata.
 pageInfo_Privacy_None2 = Le informazioni non cifrate trasmesse attraverso Internet possono essere intercettate da terzi durante il transito.\u0020
 pageInfo_Privacy_None3 = La pagina attualmente visualizzata non è cifrata.
-pageInfo_StrongEncryptionWithBitsAndProtocol = Connessione cifrata: alta efficacia (%1$S, chiavi da %2$S bit, %3$S)
-pageInfo_Privacy_Strong1 = La pagina visualizzata è stata cifrata prima di essere trasmessa.
-pageInfo_Privacy_Strong2 = La cifratura rende molto difficile osservare le informazioni scambiate tra computer a persone non autorizzate. È quindi improbabile che qualcuno sia riuscito a leggere il contenuto di questa pagina durante il suo transito attraverso la rete.
-pageInfo_WeakEncryptionWithBitsAndProtocol = Connessione cifrata: bassa efficacia (%1$S, chiavi da %2$S bit, %3$S)
-pageInfo_Privacy_Weak1 = Il sito %S utilizza per la pagina visualizzata una cifratura poco efficace.
-pageInfo_Privacy_Weak2 = Una cifratura poco efficace potrebbe consentire di leggere queste informazioni a persone non autorizzate.
+pageInfo_EncryptionWithBitsAndProtocol = Connessione cifrata (%1$S, chiavi a %2$S bit, %3$S)
+pageInfo_Privacy_Encrypted1 = La pagina visualizzata è stata cifrata prima della trasmissione via Internet.
+pageInfo_Privacy_Encrypted2 = La cifratura rende difficile osservare le informazioni scambiate tra computer a persone non autorizzate. È quindi improbabile che qualcuno sia riuscito a leggere il contenuto di questa pagina durante il transito attraverso la rete.
 pageInfo_MixedContent = Connessione parzialmente cifrata
 pageInfo_Privacy_Mixed1 = Parte della pagina che si sta visualizzando non è stata cifrata durante la trasmissione su Internet.
 certDetails = Certificato:
