--- a/sk/security/manager/chrome/pippki/pippki.properties
+++ b/sk/security/manager/chrome/pippki/pippki.properties
@@ -71,18 +71,12 @@ pageInfo_NoEncryption=Pripojenie nie je šifrované
 pageInfo_Privacy_None1=Server %S nepodporuje šifrovanie pre stránku, ktorú práve čítate.
 pageInfo_Privacy_None2=Informácie odoslané cez internet bez zašifrovania môžu byť počas cesty pozorované inými ľuďmi.
 pageInfo_Privacy_None3=Stránka, ktorú čítate, nie je zašifrovaná.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
-pageInfo_StrongEncryptionWithBitsAndProtocol=Pripojenie je šifrované: Vysoký stupeň zašifrovania (%1$S, %2$S bitové kľúče, %3$S)
-pageInfo_Privacy_Strong1=Stránka, ktorú čítate, bola zašifrovaná predtým, ako bola odoslaná cez internet.
-pageInfo_Privacy_Strong2=Vďaka zašifrovaniu je pre neautorizovaných ľudí veľmi ťažké vidieť informácie, putujúce medzi dvoma počítačmi. Je preto veľmi nepravdepodobné, že by niekto prečítal túto stránku počas jej cesty po internete.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-# %3$S is protocol version like "SSL 3" or "TLS 1.2"
-pageInfo_WeakEncryptionWithBitsAndProtocol=Pripojenie je šifrované: Nízky stupeň zašifrovania (%1$S, %2$S bitové kľúče, %3$S)
-pageInfo_Privacy_Weak1=Server %S používa pre stránku, ktorú práve čítate, nízky stupeň zašifrovania.
-pageInfo_Privacy_Weak2=Nízky stupeň zašifrovania môže umožniť niektorým neautorizovaným osobám prečítať túto informáciu.
+pageInfo_EncryptionWithBitsAndProtocol=Pripojenie je šifrované (%1$S, %2$S bitové kľúče, %3$S)
+pageInfo_Privacy_Encrypted1=Stránka, ktorú čítate, bola zašifrovaná predtým, ako bola odoslaná cez internet.
+pageInfo_Privacy_Encrypted2=Vďaka zašifrovaniu je pre neautorizovaných ľudí ťažké vidieť informácie, putujúce medzi dvoma počítačmi. Je preto nepravdepodobné, že by niekto prečítal túto stránku počas jej cesty po internete.
 pageInfo_MixedContent=Pripojenie je čiastočne šifrované
 pageInfo_Privacy_Mixed1=Časť stránky, ktorú čítate, nebola zašifrovaná predtým, ako bola odoslaná cez internet.
 
