--- a/sk/toolkit/chrome/global/aboutTelemetry.properties
+++ b/sk/toolkit/chrome/global/aboutTelemetry.properties
@@ -36,7 +36,7 @@ memoryMapTitle = Mapa pamäte:
 
 errorFetchingSymbols = Pri získavaní symbolov sa vyskytla chyba. Uistite sa, že počítač je pripojený k sieti Internet a skúste to znova.
 
-histogramSamples = vzorky
+histogramSamples = vzoriek
 
 histogramAverage = priemer
 
