Bug 1063957 - Menu listing device access by websites empty if string for device set missing

--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -497,6 +497,9 @@ getUserMedia.sharingMenuCameraMicrophone=%S (kamera i mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication=%S (kamera, mikrofon i aplikacja)
 getUserMedia.sharingMenuCameraMicrophoneScreen=%S (kamera, mikrofon i ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow=%S (kamera, mikrofon i okno)
+getUserMedia.sharingMenuCameraApplication=%S (kamera i aplikacja)
+getUserMedia.sharingMenuCameraScreen=%S (kamera i ekran)
+getUserMedia.sharingMenuCameraWindow=%S (kamera i okno)
 getUserMedia.sharingMenuMicrophoneApplication=%S (mikrofon i aplikacja)
 getUserMedia.sharingMenuMicrophoneScreen=%S (mikrofon i ekran)
 getUserMedia.sharingMenuMicrophoneWindow=%S (mikrofon i okno)
