Aviary.pl bug 4965 - Poprawki w nsserrors.properties

--- a/pl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/pl/security/manager/chrome/pipnss/nsserrors.properties
@@ -131,7 +131,7 @@ SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL otrzymał nieoczekiwaną wiadomość Cer
 SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Druga strona komunikacji TLS używa nieobsługiwanego algorytmu skrótu.
 SSL_ERROR_DIGEST_FAILURE=Funkcja digest się nie powiodła.
 SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Nieprawidłowy algorytm podpisu określony w podpisanym cyfrowo elemencie.
-SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Rozszerzenie negocjacji następnej wersji protokołu zostało włączone, ale funckja zwrotna została wyczyszczona zanim była potrzebna.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Rozszerzenie negocjacji następnej wersji protokołu zostało włączone, ale funkcja zwrotna została wyczyszczona, zanim była potrzebna.
 SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Serwer nie obsługuje żadnego z protokołów ogłaszanych przez klienta w rozszerzeniu ALPN.
 SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Serwer odrzucił żądanie, ponieważ klient zmienił wersję TLS na niższą niż obsługiwana przez serwer.
 SEC_ERROR_IO=Podczas autoryzacji bezpieczeństwa wystąpił błąd wejścia/wyjścia.
