Aviary.pl bug 4964 - Brakujący przecinek w loop.properties

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -29,7 +29,7 @@ service_not_available=Serwis tymczasowo niedostępny
 problem_accessing_account=Wystąpił problem z dostępem do konta
 retry_button=Spróbuj ponownie
 share_email_subject4=[{{clientShortname}}] Zaproszenie do rozmowy
-share_email_body4=Witaj!\r\n\r\nDołącz do wideo rozmowy ze mną używając {{clientShortname}}:\r\n\r\nNie potrzebujesz niczego pobierać ani instalować. Wystarczy otworzyć ten odnośnik w przeglądarce:\r\n\r\n{{callUrl}}\r\n\r\nWięcej informacji o {{clientShortname}} można uzyskać pod adresem {{learnMoreUrl}}\r\n\r\nDo usłyszenia!
+share_email_body4=Witaj!\r\n\r\nDołącz do wideo rozmowy ze mną, używając {{clientShortname}}:\r\n\r\nNie potrzebujesz niczego pobierać ani instalować. Wystarczy otworzyć ten odnośnik w przeglądarce:\r\n\r\n{{callUrl}}\r\n\r\nWięcej informacji o {{clientShortname}} można uzyskać pod adresem {{learnMoreUrl}}\r\n\r\nDo usłyszenia!
 share_button=E-mail
 share_button2=Wyślij odnośnik
 copy_url_button=Kopiuj
