--- a/pl/netwerk/necko.properties
+++ b/pl/netwerk/necko.properties
@@ -31,4 +31,4 @@ PhishingAuthAccept=Rozumiem, zachowam ostrożność
 SuperfluousAuth=Nastąpiła próba zalogowania na stronę „%1$S” przy pomocy nazwy użytkownika „%2$S”, ale strona nie wymaga identyfikacji. To może być podstęp.\n\nCzy adres „%1$S” jest tym, który zamierzano odwiedzić?
 AutomaticAuth=Nastąpiła próba zalogowania na stronę „%1$S” przy pomocy nazwy użytkownika „%2$S”.
 
-TrackingUriBlocked=Zasób pod adresem „%1$S” został zablokowany ponieważ jest włączona ochrona przed śledzeniem.
+TrackingUriBlocked=Zasób pod adresem „%1$S” został zablokowany, ponieważ jest włączona ochrona przed śledzeniem.
