Bug 1074522 - Implement ellipse()/circle() parsing and style computing

--- a/pl/dom/chrome/layout/css.properties
+++ b/pl/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=Nasycenie
 PEColorLightnessEOF=Jasność
 PEColorOpacityEOF=nieprzezroczystość w wartości koloru
 PEExpectedNumber=Oczekiwano liczby, ale odnaleziono „%1$S”.
+PEPositionEOF=Położenie
+PEExpectedPosition=Oczekiwano położenia, ale odnaleziono „%1$S”.
+PEExpectedRadius=Oczekiwano promienia, ale odnaleziono „%1$S”.
 PEExpectedCloseParen=Oczekiwano „)”, ale odnaleziono „%1$S”.
 PEDeclEndEOF=„;” lub „}”, by zakończyć deklarację
 PEParseDeclarationNoColon=Oczekiwano „:”, ale odnaleziono „%1$S”.
