Bug 1081093 - Auto-install Tools Adapter add-on in WebIDE

--- a/pl/browser/chrome/browser/devtools/webide.properties
+++ b/pl/browser/chrome/browser/devtools/webide.properties
@@ -38,6 +38,7 @@ addons_simulator_label=Symulator Firefox OS %1$S (%2$S)
 addons_install_button=Zainstaluj
 addons_uninstall_button=Odinstaluj
 addons_adb_label=Dodatek ADB Helper
+addons_adapters_label=Dodatek Firefox Developer Tools Adapters
 addons_adb_warning=Urządzenia USB nie będą wykrywane bez tego dodatku
 addons_status_unknown=?
 addons_status_installed=Zainstalowany
