Bug 1086252 - Show stable client id in about:telemetry

--- a/pl/toolkit/chrome/global/aboutTelemetry.properties
+++ b/pl/toolkit/chrome/global/aboutTelemetry.properties
@@ -4,6 +4,9 @@
 
 pageSubtitle=Na tej stronie wyświetlane są zebrane informacje o wydajności, charakterystyce sprzętu, wykorzystaniu funkcji i modyfikacjach programu. Informacje te są wysyłane do organizacji %1$S w celu ulepszenia programu %2$S.
 
+generalDataHeadingName=Nazwa
+generalDataHeadingValue=Wartość
+
 slowSqlMain = Powolne polecenia SQL w wątku głównym
 
 slowSqlOther = Powolne polecenia SQL w wątkach pomocniczych
