--- a/es-CL/browser/chrome/browser/devtools/gclicommands.properties
+++ b/es-CL/browser/chrome/browser/devtools/gclicommands.properties
@@ -4,6 +4,7 @@
 
 helpDesc = Obtenga ayuda sobre los comandos disponibles
 helpAvailable = Comandos disponibles
+notAvailableInE10S=El comando '%1$S' no está disponible en el modo multiproceso (E10S)
 consoleDesc = Comandos para controlar la consola
 consoleManual = Filtrar, limpiar y cerrar la consola web
 consoleclearDesc = Limpiar la consola
