--- a/es-CL/browser/chrome/browser/shellservice.properties
+++ b/es-CL/browser/chrome/browser/shellservice.properties
@@ -6,7 +6,7 @@ optionsLabel=&Opciones de %S
 safeModeLabel=Modo &Seguro %S
 
 setDefaultBrowserMessage2          = Sáquele el máximo provecho a %S dejándolo como su navegador por defecto
-setDefaultBrowserConfirm.label     = Usar %S como ni navegador por defecto
+setDefaultBrowserConfirm.label     = Usar %S como mi navegador por defecto
 setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = Opciones
 setDefaultBrowserOptions.accesskey = O
@@ -14,6 +14,10 @@ setDefaultBrowserNotNow.label      = Ahora no
 setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = No volver a preguntar
 setDefaultBrowserNever.accesskey   = D
+
+setDefaultBrowserTitle=Navegador predeterminado
+setDefaultBrowserMessage=%S no está actualmente configurado como su navegador por defecto. ¿Le gustaría hacerlo su navegador predeterminado?
+setDefaultBrowserDontAsk=Siempre realizar esta comprobación al iniciar %S.
 
 desktopBackgroundLeafNameWin=Fondo de escritorio.bmp
 DesktopBackgroundDownloading=Guardando imagen…
