--- a/es-CL/security/manager/chrome/pippki/pippki.properties
+++ b/es-CL/security/manager/chrome/pippki/pippki.properties
@@ -73,12 +73,14 @@ pageInfo_NoEncryption=Conexión sin cifrar
 pageInfo_Privacy_None1=El sitio web %S no admite cifrado para la página que está viendo.
 pageInfo_Privacy_None2=La información enviada por Internet sin cifrar puede ser vista por otras personas. 
 pageInfo_Privacy_None3=La página que está viendo está sin cifrar.
-pageInfo_StrongEncryptionWithBitsAndProtocol=Conexión cifrada: Cifrado fuerte (%1$S, clave de %2$S bits, %3$S)
-pageInfo_Privacy_Strong1=La página que está viendo fue cifrada antes de ser transmitida por Internet.
-pageInfo_Privacy_Strong2=El cifrado hace muy difícil que gente no autorizada pueda ver la información que viaja entre dos ordenadores.  Por tanto, es muy improbable que alguien haya leído esta página mientras viajaba por la red.
-pageInfo_WeakEncryptionWithBitsAndProtocol=Conexión cifrada: Cifrado débil (%1$S, clave de %2$S bits, %3$S)
-pageInfo_Privacy_Weak1=El sitio web %S está utilizando cifrado de bajo nivel para la página que está viendo.
-pageInfo_Privacy_Weak2=El cifrado de bajo nivel puede permitir a personas no autorizadas ver esta información.
+
+
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# %2$S is the key size of the cipher.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Conexión cifrada (%1$S, claves de %2$S bits, %3$S)
+pageInfo_Privacy_Encrypted1=La página que estas viendo fue cifrada antes de ser transmitida por Internet.
+pageInfo_Privacy_Encrypted2=El cifrado hace que sea difícil para personas no autorizadas el ver la infromación que viaja entre computadores. Es por ello muy poco probable que alguien lea esta página mientras viaja por la red.
 pageInfo_MixedContent=Conexión parcialmente cifrada
 pageInfo_Privacy_Mixed1=Hay partes de la página que está viendo que no fueron cifradas antes de transmitirse por internet.
 
