[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -522,6 +522,8 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (câmera, microfone e a
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (câmera, microfone e tela)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (câmera, microfone e janela)
 getUserMedia.sharingMenuCameraApplication = %S (câmera e aplicativo)
+getUserMedia.sharingMenuCameraScreen = %S (câmera e tela)
+getUserMedia.sharingMenuCameraWindow = %S (câmera e janela)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microfone e aplicativo)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microfone e tela)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microfone e janela)
