[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -67,6 +67,7 @@ share_email_subject4={{clientShortname}} — Gå med i konversation
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Hej! \n\nGå med i video konversation genom att använda {{clientShortname}}: \n\nDu behöver inte ladda eller installera något. Bara kopiera och klistra in denna URL i din webbläsare:\n\n{{callUrl}} \n\nOm du vill. kan du lära dig mer om {{clientShortname}} på{{learnMoreUrl}} \n\nVi hörs snart!
 share_button=E-post
+share_button2=E-posta länk
 copy_url_button=Kopiera
 copy_url_button2=Kopiera länk
 copied_url_button=Kopierad!
@@ -244,6 +245,7 @@ call_timeout_notification_text=Ditt samtal nådde inte fram.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Försök igen
+email_link_button=E-posta länk
 cancel_button=Avbryt
 
 cannot_start_call_session_not_ready=Kan inte påbörja samtal, en session är inte klar.
@@ -261,6 +263,7 @@ legal_text_privacy = Integritetsinfo
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
+powered_by_beforeLogo=Levereras av
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Hur var din konversation?
