--- a/sv-SE/browser/chrome/browser/devtools/timeline.properties
+++ b/sv-SE/browser/chrome/browser/devtools/timeline.properties
@@ -31,9 +31,11 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=POSTER
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Stilar
+timeline.label.reflow=Återflöden
 timeline.label.paint=Måla
 timeline.label.domevent=DOM händelse
